--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 title: Hane's Portfolio
 logo: /assets/img/logo.png
-description: Welcome! 👋 I’m Hane and I’m glad you dropped by.
-I am currently a Senior Consultant @ IBM, with past work experience in Tech, Sales, and Finance. 🤓
+theme: jekyll-theme-minimal
+description: >
+··Hello, test description \n
+··with some "quotes" of various 'types',\n
+··and also a blank line:\n
+··\n
+Welcome! 👋 I’m Hane and I’m glad you dropped by.\n
+I am currently a Senior Consultant @ IBM, with past work experience in Tech, Sales, and Finance. 🤓 \n
 My main superpower is the ability to empathize and understand the needs of my client/customer. Using this, I identify their key problems and build solutions that can bridge the gaps.
 I’m always opened to meeting new people, and learning new things. Let’s connect!
-theme: jekyll-theme-minimal
