--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hane's Portfolio
-logo: /assets/img/logo.png
+logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
 description: >
 ··Hello, test description \n
