--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,4 @@ title: Hane's Portfolio
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
 description: >
-··Hello, test description \n
-··with some "quotes" of various 'types',\n
-··and also a blank line:\n
-··\n
+··Hello
