--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Hane's Portfolio
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
-description: Hellooo!
+description: /assets/description.html
