--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Hane's Portfolio
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
-description: /assets/description.html
+description: Currently Senior Consultant @ IBM, with past work experience in Tech, Sales, and Finance. 🤓 |
+My main superpower is the ability to empathize and understand the needs of my client/customer. Using this, I identify their key problems and build solutions that can bridge the gaps.
