--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Hane's Portfolio
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
-description: Currently Senior Consultant @ IBM, with past work experience in Tech, Sales, and Finance. 🤓 |
-My main superpower is the ability to empathize and understand the needs of my customer. Using this, I identify their key problems and build solutions that can bridge the gaps.
+description: Currently Senior Consultant @ IBM, with past work experience in Tech, Sales, and Finance. 🤓 | My main superpower is the ability to empathize and understand the needs of my customer. Using this, I identify their key problems and build solutions that can bridge the gaps.
