--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
 test: |+
     My main superpower is the ability to empathize and understand the needs of my customer.
-    Using this, |- I identify  their key problems and build solutions that can bridge the gaps.
+    Using this, I identify  their key problems and build solutions that can bridge the gaps.
