--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: Hane's Portfolio
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
-description: >+
+description: |+
     My main superpower is the ability to empathize and understand the needs of my customer.
+    
+    
     Using this, I identify  their key problems and build solutions that can bridge the gaps.
