--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,4 @@ title: Hane's Portfolio
 logo: /assets/img/logo.jpg
 theme: jekyll-theme-minimal
 description: |+
-    My main superpower is the ability to empathise and understand the needs of my customer.
-    
-    
-    Using this, I identify  their key problems and build solutions that can bridge the gaps.
+  Currently a Senior Consultant @ IBM, with past work experience in Tech, Sales, and Finance. 🤓
